cmake_minimum_required(VERSION 4.0)
project(LAB)

set(CMAKE_CXX_STANDARD 14)

add_executable(LAB
        "Lab task 1.cpp"
        "Lab task 2.cpp"
        "Lab Task 2.cpp"
        "Lab Task 3.cpp"
        "Lab TAsk 4.cpp"
        "Lab Task 5.cpp"
        "Lab Task 6.cpp"
        "Lab Task 7.cpp"
        "practise .cpp"
        "Lab Task 8.cpp"
        "Zaid CYS084.cpp"
        "Lab task 10.cpp"
        "Lab Task 11.cpp")
